--- a/antlia/app/views/movies/index.html.erb
+++ b/antlia/app/views/movies/index.html.erb
@@ -7,6 +7,8 @@
     <%= render movie %>
     <p>
       <%= link_to "Show this movie", movie %>
+      <div class="movie">
+      </div>
     </p>
   <% end %>
 </div>
