--- a/antlia/app/views/reviews/_form.html.erb
+++ b/antlia/app/views/reviews/_form.html.erb
@@ -28,12 +28,12 @@
 
   <div>
     <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
+    <%= form.select(:user_id, options_for_select(User.pluck(:name, :id))) %>
   </div>
 
   <div>
     <%= form.label :movie_id, style: "display: block" %>
-    <%= form.text_field :movie_id %>
+    <%= form.select(:movie_id, options_for_select(Movie.pluck(:title, :id))) %>
   </div>
 
   <div>
