aftet ppt commit

--- a/antlia/app/views/reviews/_review.html.erb
+++ b/antlia/app/views/reviews/_review.html.erb
@@ -16,12 +16,12 @@
 
   <p>
     <strong>User:</strong>
-    <%= review.user_id %>
+    <%= review.user.name%>
   </p>
 
   <p>
     <strong>Movie:</strong>
-    <%= review.movie_id %>
+    <%= review.movie.title %>
   </p>
 
 </div>
